--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "build": "webpack  --config webpack/webpack.config.js --env env=prod",
     "lint": "eslint --fix \"./src/**/*.{js,jsx,ts,tsx,json}\"",
     "server": "ts-node ./server/grpcServer.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "format": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "tsc": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-preset-typescript": "^7.0.0-alpha.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "redis": "^4.6.7"
@@ -38,6 +41,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "google-protobuf": "^3.21.2",
+    "grpc-web": "^1.4.2",
     "html-webpack-plugin": "^5.5.3",
     "protoc-gen-grpc-web": "^1.4.2",
     "style-loader": "^3.3.3",
