--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "webpack  --config webpack/webpack.config.js --env env=prod",
     "lint": "eslint --fix \"./src/**/*.{js,jsx,ts,tsx,json}\"",
     "server": "ts-node ./server/grpcServer.ts",
+    "both": "ts-node ./metrics/app.ts",
     "format": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc"
@@ -17,6 +18,9 @@
   "license": "ISC",
   "dependencies": {
     "babel-preset-typescript": "^7.0.0-alpha.19",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "prom-client": "^14.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "redis": "^4.6.7"
@@ -29,6 +33,7 @@
     "@babel/preset-typescript": "^7.22.5",
     "@grpc/grpc-js": "^1.8.17",
     "@grpc/proto-loader": "^0.7.7",
+    "@types/cors": "^2.8.13",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
